--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Spherical trigonometry'
 - !lcc 'QA'
+- GITenberg
 title: 'Spherical Trigonometry: For the Use of Colleges and Schools'
 url: http://www.gutenberg.org/ebooks/19770
